--- a/soomq-server/pom.xml
+++ b/soomq-server/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>soomq-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.60</version>
+        </dependency>
 
     </dependencies>
 
